<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.rapha149.signgui</groupId>
    <artifactId>signgui-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.9.3</version>

    <modules>
        <module>api</module>
        <module>wrapper</module>
        <module>1_20_R1</module>
        <module>1_19_R3</module>
        <module>1_19_R2</module>
        <module>1_19_R1</module>
        <module>1_18_R2</module>
        <module>1_18_R1</module>
        <module>1_17_R1</module>
        <module>1_16_R3</module>
        <module>1_16_R2</module>
        <module>1_16_R1</module>
        <module>1_15_R1</module>
        <module>1_14_R1</module>
        <module>1_13_R2</module>
        <module>1_13_R1</module>
        <module>1_12_R1</module>
        <module>1_11_R1</module>
        <module>1_10_R1</module>
        <module>1_9_R2</module>
        <module>1_9_R1</module>
        <module>1_8_R3</module>
        <module>1_8_R2</module>
        <module>1_8_R1</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>nms-repo</id>
            <url>https://repo.codemc.org/repository/nms/</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.2.4</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
        <repository>
        <id>github</id>
        <name>GitHub Packages</name>
        <url>https://maven.pkg.github.com/Rapha149/SignGUI</url>
        </repository>
    </distributionManagement>
</project>
